package main

import (
	"context"
	"errors"
	"fmt"
	"log"
	"net"
	"net/http"
	"os"
	"os/signal"
	"sync"
	"syscall"
	"time"

	"github.com/go-chi/chi/v5"
	"github.com/go-chi/chi/v5/middleware"
	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	order_v1 "github.com/vipshark78/microservices-course-homeworks/shared/pkg/openapi/order/v1"
	inventory_v1 "github.com/vipshark78/microservices-course-homeworks/shared/pkg/proto/inventory/v1"
	payment_v1 "github.com/vipshark78/microservices-course-homeworks/shared/pkg/proto/payment/v1"
)

const (
	httpPort          = "8080"
	readHeaderTimeout = 10 * time.Second
	shutdownTimeout   = 10 * time.Second
	operationTimeout  = 10 * time.Second
	inventoryAddress  = "localhost:50051"
	paymentAddress    = "localhost:50052"
)

func main() {
	// –°–æ–∑–¥–∞–µ–º —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –∑–∞–∫–∞–∑–æ–≤
	orderStorage := NewOrderStorage()

	// –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç—Å–∫–æ–µ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–∏—Å–æ–º Inventory
	inventortyClientConn, err := grpc.NewClient(inventoryAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ —Å–µ—Ä–≤–∏—Å—É Inventory: %v", err)
	}

	// –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç—Å–∫–æ–µ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å —Å–µ—Ä–≤–∏—Å–æ–º Payment
	paymentClientConn, err := grpc.NewClient(paymentAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("–û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ —Å–µ—Ä–≤–∏—Å—É Payment: %v", err)
	}

	// –ü–æ–ª—É—á–∞–µ–º –∫–ª–∏–µ–Ω—Ç—Å–∫–∏–µ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è —Å —Å–µ—Ä–≤–∏—Å–∞–º–∏ Inventory –∏ Payment
	inventoryClient := inventory_v1.NewInventoryServiceClient(inventortyClientConn)
	paymentClient := payment_v1.NewPaymentServiceClient(paymentClientConn)

	defer func() {
		if err := inventortyClientConn.Close(); err != nil {
			log.Printf("–û—à–∏–±–∫–∞ –∑–∞–∫—Ä—ã—Ç–∏—è —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è —Å —Å–µ—Ä–≤–∏—Å–æ–º Inventory: %v\n", err)
		}
		if err := paymentClientConn.Close(); err != nil {
			log.Printf("–û—à–∏–±–∫–∞ –∑–∞–∫—Ä—ã—Ç–∏—è —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è —Å —Å–µ—Ä–≤–∏—Å–æ–º Payment: %v\n", err)
		}
	}()

	// –°–æ–∑–¥–∞–µ–º –æ–±—Ä–∞–±–æ—Ç—á–∏–∫ –¥–ª—è –æ–ø–µ—Ä–∞—Ü–∏–π —Å –∑–∞–∫–∞–∑–∞–º–∏
	orderHandler := NewOrderHandler(orderStorage, inventoryClient, paymentClient)

	// –°–æ–∑–¥–∞–µ–º —Å–µ—Ä–≤–µ—Ä OpenAPI
	orderServer, err := order_v1.NewServer(orderHandler)
	if err != nil {
		log.Printf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è —Å–µ—Ä–≤–µ—Ä–∞ OpenAPI: %v\n", err)
	}

	// –°–æ–∑–¥–∞–µ–º –º–∞—Ä—à—Ä—É—Ç–∏–∑–∞—Ç–æ—Ä HTTP
	router := chi.NewRouter()

	router.Use(middleware.Logger)
	router.Use(middleware.Recoverer)
	router.Use(middleware.Timeout(10 * time.Second))

	// –ú–æ–Ω—Ç–∏—Ä—É–µ–º –æ–±—Ä–∞–±–æ—Ç—á–∏–∫–∏ OpenAPI
	router.Mount("/", orderServer)

	// –ó–∞–ø—É—Å–∫–∞–µ–º HTTP-—Å–µ—Ä–≤–µ—Ä
	server := &http.Server{
		Addr:              net.JoinHostPort("localhost", httpPort),
		Handler:           router,
		ReadHeaderTimeout: readHeaderTimeout,
	}

	defer func() {
		if err := server.Close(); err != nil {
			log.Printf("–û—à–∏–±–∫–∞ –∑–∞–∫—Ä—ã—Ç–∏—è —Å–µ—Ä–≤–µ—Ä–∞: %v", err)
		}
	}()

	go func() {
		log.Printf("üöÄ HTTP-—Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É %s\n", httpPort)
		err = server.ListenAndServe()
		if err != nil && !errors.Is(err, http.ErrServerClosed) {
			log.Printf("‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—É—Å–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
		}
	}()

	// Graceful shutdown
	stopChan := make(chan os.Signal, 1)

	signal.Notify(stopChan, syscall.SIGTERM, syscall.SIGINT)

	<-stopChan

	log.Println("üõë –ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ —Ä–∞–±–æ—Ç—ã —Å–µ—Ä–≤–µ—Ä–∞...")

	ctx, cancel := context.WithTimeout(context.Background(), shutdownTimeout)
	defer cancel()

	err = server.Shutdown(ctx)
	if err != nil {
		log.Printf("‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Å—Ç–∞–Ω–æ–≤–∫–µ —Å–µ—Ä–≤–µ—Ä–∞: %v\n", err)
	}

	log.Println("‚úÖ –°–µ—Ä–≤–µ—Ä –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
}

// OrderStorage –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –∑–∞–∫–∞–∑–æ–≤
type OrderStorage struct {
	orders map[string]*order_v1.OrderDto
	mu     sync.RWMutex
}

// NewOrderStorage —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤–æ–µ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ –∑–∞–∫–∞–∑–æ–≤.
func NewOrderStorage() *OrderStorage {
	return &OrderStorage{
		orders: make(map[string]*order_v1.OrderDto),
	}
}

// Insert –¥–æ–±–∞–≤–ª—è–µ—Ç –Ω–æ–≤—ã–π –∑–∞–∫–∞–∑ –≤ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ.
func (o *OrderStorage) Insert(userUUID uuid.UUID, partsUUIDs []uuid.UUID, price float64) (uuid.UUID, error) {
	o.mu.Lock()
	defer o.mu.Unlock()

	orderUUID := uuid.New()
	order := &order_v1.OrderDto{
		UserUUID:        userUUID,
		OrderUUID:       orderUUID,
		PartUuids:       partsUUIDs,
		TotalPrice:      price,
		TransactionUUID: order_v1.OptNilUUID{},
		PaymentMethod:   order_v1.OptNilPaymentMethod{},
		Status:          order_v1.OrderStatusPENDINGPAYMENT,
	}

	o.orders[order.OrderUUID.String()] = order
	return orderUUID, nil
}

// Read –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –∑–∞–∫–∞–∑ –ø–æ –µ–≥–æ –∏–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ç–æ—Ä—É.
func (o *OrderStorage) Read(uuid uuid.UUID) *order_v1.OrderDto {
	o.mu.RLock()
	defer o.mu.RUnlock()

	order, ok := o.orders[uuid.String()]
	if !ok {
		return nil
	}
	return order
}

// Update –æ–±–Ω–æ–≤–ª—è–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –∑–∞–∫–∞–∑–µ.
func (o *OrderStorage) Update(order *order_v1.OrderDto) error {
	o.mu.Lock()
	defer o.mu.Unlock()

	o.orders[order.OrderUUID.String()] = order
	return nil
}

// OrderHandler –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç –æ–±—Ä–∞–±–æ—Ç—á–∏–∫ –¥–ª—è –æ–ø–µ—Ä–∞—Ü–∏–π —Å –∑–∞–∫–∞–∑–∞–º–∏.
type OrderHandler struct {
	storage                *OrderStorage
	inventoryServiceClient inventory_v1.InventoryServiceClient
	paymentServiceClient   payment_v1.PaymentServiceClient
}

// NewOrderHandler —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π —ç–∫–∑–µ–º–ø–ª—è—Ä OrderHandler.
func NewOrderHandler(storage *OrderStorage, inventoryServiceClient inventory_v1.InventoryServiceClient, paymentServiceClient payment_v1.PaymentServiceClient) *OrderHandler {
	return &OrderHandler{
		inventoryServiceClient: inventoryServiceClient,
		paymentServiceClient:   paymentServiceClient,
		storage:                storage,
	}
}

// validateCreateOrderRequest –≤—ã–ø–æ–ª–Ω—è–µ—Ç –≤–∞–ª–∏–¥–∞—Ü–∏—é –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ —Å–æ–∑–¥–∞–Ω–∏–µ –∑–∞–∫–∞–∑–∞.
func (o *OrderHandler) validateCreateOrderRequest(req *order_v1.CreateOrderRequest) error {
	if err := req.Validate(); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ –∑–∞–ø—Ä–æ—Å–∞: %w", err)
	}

	if err := uuid.Validate(req.UserUUID.String()); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ UUID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: %w", err)
	}
	return nil
}

// convertUUIDToSliceString –ø—Ä–µ–æ–±—Ä–∞–∑—É–µ—Ç —Å–ª–∞–π—Å UUID –≤ —Å–ª–∞–π—Å —Å—Ç—Ä–æ–∫.
func (o *OrderHandler) convertUUIDToSliceString(uuids []uuid.UUID) ([]string, error) {
	strUuids := make([]string, 0, len(uuids))
	for _, UUID := range uuids {
		stringUUID := UUID.String()
		if err := uuid.Validate(stringUUID); err != nil {
			return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ UUID: %w", err)
		}
		strUuids = append(strUuids, stringUUID)
	}
	return strUuids, nil
}

// priceCalculate —Ä–∞—Å—Å—á–∏—Ç—ã–≤–∞–µ—Ç –æ–±—â—É—é —Å—Ç–æ–∏–º–æ—Å—Ç—å –∑–∞–∫–∞–∑–∞.
func (o *OrderHandler) priceCalculate(reqUuids []string, parts []*inventory_v1.Part) (float64, error) {
	var totalPrice float64

	for _, uuid := range reqUuids {
		exist := false
		for _, part := range parts {
			if part.Uuid == uuid {
				totalPrice += part.Price
				exist = true
				break
			}
		}
		if !exist {
			return 0, errors.New("—É–∫–∞–∑–∞–Ω–Ω–æ–≥–æ UUID –¥–µ—Ç–∞–ª–∏ –Ω–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç")
		}
	}
	return totalPrice, nil
}

// CreateOrder —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π –∑–∞–∫–∞–∑.
func (o *OrderHandler) CreateOrder(ctx context.Context, req *order_v1.CreateOrderRequest) (order_v1.CreateOrderRes, error) {
	if err := o.validateCreateOrderRequest(req); err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	reqUuids, err := o.convertUUIDToSliceString(req.PartUuids)
	if err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	ctx, cancel := context.WithTimeout(ctx, operationTimeout)
	defer cancel()

	listPartsResp, err := o.inventoryServiceClient.ListParts(ctx, &inventory_v1.ListPartsRequest{Filter: &inventory_v1.PartsFilter{
		Uuids: reqUuids,
	}})
	if err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	totalPrice, err := o.priceCalculate(reqUuids, listPartsResp.GetParts())
	if err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	orderUUID, err := o.storage.Insert(req.UserUUID, req.PartUuids, totalPrice)
	if err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	return &order_v1.CreateOrderResponse{OrderUUID: orderUUID, TotalPrice: totalPrice}, nil
}

// OrderByUUID –ø–æ–ª—É—á–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –∑–∞–∫–∞–∑–µ –ø–æ –µ–≥–æ –∏–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ç–æ—Ä—É.
func (o *OrderHandler) OrderByUUID(ctx context.Context, params order_v1.OrderByUUIDParams) (order_v1.OrderByUUIDRes, error) {
	if err := uuid.Validate(params.OrderUUID.String()); err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	order := o.storage.Read(params.OrderUUID)

	if order == nil {
		return &order_v1.BadRequestError{Code: 404, Message: "Order Not Found"}, nil
	}

	return &order_v1.GetOrderResponse{AllOf: order_v1.NewOptOrderDto(*order)}, nil
}

// OrderCancel –æ—Ç–º–µ–Ω—è–µ—Ç –∑–∞–∫–∞–∑.
func (o *OrderHandler) OrderCancel(ctx context.Context, params order_v1.OrderCancelParams) (order_v1.OrderCancelRes, error) {
	if err := uuid.Validate(params.OrderUUID.String()); err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	order := o.storage.Read(params.OrderUUID)
	if order == nil {
		return &order_v1.BadRequestError{Code: 404, Message: "Order Not Found"}, nil
	}

	if order.Status == order_v1.OrderStatusPAID {
		return &order_v1.ConflictError{Code: 409, Message: "Order has already paid and cannot be cancelled"}, nil
	}

	order.Status = order_v1.OrderStatusCANCELLED
	if err := o.storage.Update(order); err != nil {
		return &order_v1.BadRequestError{Code: 500, Message: "Internal Server Error"}, err
	}
	return &order_v1.OrderCancelNoContent{}, nil
}

// validateOrderPayRequest –≤—ã–ø–æ–ª–Ω—è–µ—Ç –≤–∞–ª–∏–¥–∞—Ü–∏—é –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ –æ–ø–ª–∞—Ç—É –∑–∞–∫–∞–∑–∞.
func (o *OrderHandler) validateOrderPayRequest(req *order_v1.PayOrderRequest, params order_v1.OrderPayParams) error {
	if err := req.Validate(); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ –∑–∞–ø—Ä–æ—Å–∞: %w", err)
	}

	if err := uuid.Validate(params.OrderUUID.String()); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ UUID –∑–∞–∫–∞–∑–∞: %w", err)
	}

	if req.PaymentMethod.IsNull() {
		return fmt.Errorf("–Ω–µ —É–∫–∞–∑–∞–Ω –º–µ—Ç–æ–¥ –æ–ø–ª–∞—Ç—ã")
	}
	return nil
}

// OrderPay –æ–ø–ª–∞—á–∏–≤–∞–µ—Ç –∑–∞–∫–∞–∑.
func (o *OrderHandler) OrderPay(ctx context.Context, req *order_v1.PayOrderRequest, params order_v1.OrderPayParams) (order_v1.OrderPayRes, error) {
	if err := o.validateOrderPayRequest(req, params); err != nil {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, err
	}

	order := o.storage.Read(params.OrderUUID)
	if order == nil {
		return &order_v1.BadRequestError{Code: 404, Message: "Order Not Found"}, nil
	}

	ctx, cancel := context.WithTimeout(ctx, operationTimeout)
	defer cancel()

	paymentMethod, ok := req.PaymentMethod.Get()
	if !ok {
		return &order_v1.BadRequestError{Code: 400, Message: "Bad Request"}, fmt.Errorf("–µ —É–∫–∞–∑–∞–Ω –º–µ—Ç–æ–¥ –æ–ø–ª–∞—Ç—ã")
	}

	paymentMethodBytes, err := paymentMethod.MarshalText()
	if err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	payOrderResp, err := o.paymentServiceClient.PayOrder(ctx, &payment_v1.PayOrderRequest{
		OrderUuid:     params.OrderUUID.String(),
		UserUuid:      order.UserUUID.String(),
		PaymentMethod: payment_v1.PaymentMethod(payment_v1.PaymentMethod_value[string(paymentMethodBytes)]),
	})
	if err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	transactionUuid, err := uuid.Parse(payOrderResp.TransactionUuid)
	if err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	order.Status = order_v1.OrderStatusPAID
	order.TransactionUUID = order_v1.NewOptNilUUID(transactionUuid)
	order.PaymentMethod = order_v1.NewOptNilPaymentMethod(paymentMethod)

	if err := o.storage.Update(order); err != nil {
		return &order_v1.InternalServerError{Code: 500, Message: "Internal Server Error"}, err
	}

	return &order_v1.PayOrderResponse{TransactionUUID: transactionUuid}, nil
}

// NewError —Å–æ–∑–¥–∞–µ—Ç –æ—à–∏–±–∫—É —Å —É–∫–∞–∑–∞–Ω–Ω—ã–º —Å—Ç–∞—Ç—É—Å –∫–æ–¥–æ–º –∏ —Å–æ–æ–±—â–µ–Ω–∏–µ–º.
func (o *OrderHandler) NewError(ctx context.Context, err error) *order_v1.GenericErrorStatusCode {
	return &order_v1.GenericErrorStatusCode{
		StatusCode: 500,
		Response: order_v1.GenericError{
			Message: "Internal Server Error",
			Code:    500,
		},
	}
}
